--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,18 +10,20 @@
                   <img class="text-center" src="assets/images/login_aditi.png" />
                 </div>               
                 <div class="form-group">
-                  <h6>Entrar</h6>
+                  <div class="title">
+                    Entrar
+                  </div>                  
                 </div>                
                 <div class="form-group">
                   <p>Digite login e senha para acessar conta.</p>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1" class="label">Login</label>
+                  <label for="exampleInputEmail1" class="label">CPF/CNPJ</label>
                   <input class="form-control" name="login" id="login" type="email" formControlName="login" nbInput
                     fullWidth placeholder="Login" />
                 </div>
                 <div class="form-group">
-                  <label for="password" class="label">Password</label>
+                  <label for="password" class="label">Senha</label>
                   <a class="label col-sm-4 col-form-label a-senha" href="#" target="_blank">Esqueceu sua senha?</a>
                   <input class="form-control" type="password" id="password" formControlName="password" maxlength="30"
                     nbInput fullWidth placeholder="Password">
