--- a/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
+++ b/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
@@ -25,54 +25,37 @@
                   <div *ngIf="isInfoGerais">
                     <div class="form-group">
                       <h6>Cadastro</h6>
-                    </div>                   
-                    <div class="form-group row pl-3">
-                      <div class="col-md-5">
-                        <label for="imgem">Adicione sua foto</label>
-                        <input class="form-control-file media-body" name="imgem" id="imgem" type="file" formControlName="imgem" 
-                        (change)="converterImagem($event, $event.target)" value="imagem"/>
-                      </div>                     
-                    </div>
-                    <div class="form-group row pl-3">
-                      <div class="col-md-3">
-                        <label for="cpf">CPF</label>
-                        <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf"
-                          mask="000.000.000-00" maxlength="14" />
-                      </div>
-                      <div class="col-md-3">
-                        <label for="crm">CRM</label>
-                        <input class="form-control" name="crm" id="crm" type="text" formControlName="crm" />
-                      </div>
                     </div>
                     <div class="form-group">
                       <div class="col-md-6">
-                        <label for="nome">Nome</label>
+                        <label for="nome">Nome completo*</label>
                         <input class="form-control" name="nome" id="nome" type="text" formControlName="nome" />
                       </div>
                     </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-3">
+                        <label for="cpf">CPF*</label>
+                        <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf"
+                          mask="000.000.000-00" maxlength="14" (change)="isValidCpf(formCadastroMedico.value)" />
+                        <div *ngIf="showMsgErro" class="link-text pt-2" style="color: #dc3545;">
+                          {{this.msgErro}} <br /><br />
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <label for="crm">CRM*</label>
+                        <input class="form-control" name="crm" id="crm" type="text" formControlName="crm" />
+                      </div>
+                    </div>
+                    <div class="form-group row pl-3">
+                      <div class="col-md-3">
                         <div class="form-group">
-                          <label for="dataNascimento">Data de nascimento</label>
+                          <label for="dataNascimento">Data de nascimento*</label>
                           <input class="date" class="form-control" type="date" id="dateNasc" name="mydate"
                             formControlName="dataNascimento" maxlength="10" />
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <label for="nome">Especialidade*</label>
-                        <div class="row">
-                          <div class="form-group">
-                            <nb-select class="multiple" multiple placeholder="SELECIONE" formControlName="especialidade">
-                              <nb-option *ngFor="let especialidade of listEspecialidade" value="{{ especialidade.id }}">{{
-                                especialidade.name }}</nb-option>
-                            </nb-select>
-                          </div>                          
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-6">
-                        <label class="mat-button">Sexo biologico:</label>
+                        <label class="mat-button">Sexo biologico*</label>
                         <div class="row">
                           <label class="radio-inline pl-2 pl-3">
                             <input class="mat-button" type="radio" id="radio" name="optradio" value="M"
@@ -84,6 +67,25 @@
                             Feminino</label>
                         </div>
                       </div>
+                    </div>
+                    <div class="form-group row pl-3">
+                      <div class="col-md-3">
+                        <label for="nome">Especialidade*</label>
+                        <nb-select class="multiple" multiple placeholder="SELECIONE" formControlName="especialidade">
+                          <nb-option *ngFor="let especialidade of listEspecialidade" value="{{ especialidade.id }}">{{
+                            especialidade.name }}</nb-option>
+                        </nb-select>
+                      </div>
+                      <div class="col-md-5">
+                        <label for="imgem">Adicione sua foto</label>
+                        <input class="form-control-file media-body" name="imgem" id="imgem" type="file"
+                          formControlName="imgem" (change)="converterImagem($event, $event.target)" value="imagem" />
+                      </div>
+                    </div>
+                    <div class="text-right">
+                      <button class="btn btn-primary m-2" (click)="proximo(this)">
+                        PRÓXIMO
+                      </button>
                     </div>
                   </div>
                   <div *ngIf="isContato">
@@ -98,34 +100,34 @@
                           mask="(00) 0 0000-0000 || (00) 0000-0000" maxlength="16" />
                       </div>
                       <div class="col-md-4">
-                        <label for="telefoneRecado">Telefone para recado</label>
-                        <input class="form-control" name="telefoneRecado" id="telefoneRecado" type="text"
-                          formControlName="telefoneRecado" [dropSpecialCharacters]="true"
+                        <label for="numeroEmpresa">Número da Empresa</label>
+                        <input class="form-control" name="numeroEmpresa" id="numeroEmpresa" type="text"
+                          formControlName="numeroEmpresa" [dropSpecialCharacters]="true"
                           mask="(00) 0 0000-0000 || (00) 0000-0000" maxlength="16" />
                       </div>
                       <div class="col-md-4">
-                        <label for="estado">Estado</label>
+                        <label for="estado">Estado*</label>
                         <select class="form-control" formControlName="estado"
-                        (change)="buscaCidade($event.target.value)">
+                          (change)="buscaCidade($event.target.value)">
                           <option value="null" selected>SELECIONE</option>
                           <option *ngFor="let estado of listEstado" value="{{ estado.id }}">{{
                             estado.description}}</option>
                         </select>
-                      </div>                      
+                      </div>
                     </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-4">
-                        <label for="cidade">Cidade</label>
+                        <label for="cidade">Cidade*</label>
                         <select class="form-control" formControlName="cidade">
                           <option value="null" selected>SELECIONE</option>
                           <option *ngFor="let cidade of listCidade" value="{{ cidade.id }}">{{
                             cidade.description}}</option>
                         </select>
                       </div>
-                      <div class="col-md-4">
-                        <label for="bairro">Bairro*</label>
-                        <input class="form-control" name="bairro" id="bairro" type="text" formControlName="bairro"
-                          [dropSpecialCharacters]="true" />
+                      <div class="col-md-3">
+                        <label for="cep">Cep*</label>
+                        <input class="form-control" name="cep" id="cep" type="text" formControlName="cep"
+                          mask="00000-000" [dropSpecialCharacters]="true" />
                       </div>
                       <div class="col-md-4">
                         <label for="rua">Rua*</label>
@@ -134,10 +136,10 @@
                       </div>
                     </div>
                     <div class="form-group row pl-3">
-                      <div class="col-md-3">
-                        <label for="cep">Cep*</label>
-                        <input class="form-control" name="cep" id="cep" type="text" formControlName="cep"
-                          mask="00000-000" [dropSpecialCharacters]="true" />
+                      <div class="col-md-4">
+                        <label for="bairro">Bairro*</label>
+                        <input class="form-control" name="bairro" id="bairro" type="text" formControlName="bairro"
+                          [dropSpecialCharacters]="true" />
                       </div>
                       <div class="col-md-3">
                         <label for="numero">Número*</label>
@@ -145,7 +147,7 @@
                           [dropSpecialCharacters]="true" />
                       </div>
                       <div class="col-md-4">
-                        <label for="complemento">Complemento*</label>
+                        <label for="complemento">Complemento</label>
                         <input class="form-control" name="complemento" id="complemento" type="text"
                           formControlName="complemento" [dropSpecialCharacters]="true" />
                       </div>
@@ -159,18 +161,20 @@
                       <div class="col-md-4">
                         <label for="confirmaEmail">Confirma e-mail</label>
                         <input class="form-control" name="confirmaEmail" id="confirmaEmail" type="text"
-                          formControlName="confirmaEmail" maxlength="50" (change)="verificarEmail(formCadastroMedico.value)"/>
+                          formControlName="confirmaEmail" maxlength="50"
+                          (change)="verificarEmail(formCadastroMedico.value)" />
                       </div>
                     </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-4">
-                        <label for="senha">Escolha a senha</label>
+                        <label for="senha">Criei uma senha</label>
                         <input class="form-control" name="senha" id="senha" type="password" formControlName="senha" />
                       </div>
                       <div class="col-md-4">
                         <label for="confirmaSenha">Confirma a senha</label>
                         <input class="form-control" name="confirmaSenha" id="confirmaSenha" type="password"
-                          formControlName="confirmaSenha" maxlength="50" (change)="verificarPassWord(formCadastroMedico.value)"/>
+                          formControlName="confirmaSenha" maxlength="50"
+                          (change)="verificarPassWord(formCadastroMedico.value)" />
                       </div>
                     </div>
                     <div class="form-group">
@@ -202,6 +206,11 @@
           </form>
         </nb-card-body>
       </nb-card>
+    </div>
+  </div>
+
+  <div #card>
+    <div class="col-md-12 col-xs-12">
       <div class="row" *ngIf="isActive" class="loader">
         <div class="text-center" style="margin-top: -600px;margin-right: 40px;">
           <button class="btn btn-primary" type="button" disabled>
@@ -209,6 +218,6 @@
             Carregando...
           </button>
         </div>
-      </div>   
+      </div>
     </div>
   </div>
