--- a/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
@@ -2,126 +2,103 @@
   <div class="row">
     <div class="col-md-12 col-xs-12">
       <div class="dialog-body">
-        <form id="form-configurar-dia-atendimento" [formGroup]="formDiaAtendimento">
-          <div class="col-md-12 col-xs-12">
-            <div class="form-row align-items-center">
-              <nb-card-header class="aditi-header">
-                <div class="back-link">
-                  <a class="m-lg-n3" (click)="previousPage()" aria-label="back">
-                    <nb-icon icon="arrow-back" title="voltar"></nb-icon>
-                  </a>
-                </div>
-              </nb-card-header>
-              <div class="form-group col-md-6">
-                <h5 class="pt-3">Gerenciar Horário de Atendimento</h5>
-              </div>
-            </div>
-            <div class="form-row align-items-center">
-              <div class="form-group col-md-7">
-                <div class="form-group">
-                  <div class="mb-lg-n4">
-                    <label for="medico">Nome do médico: {{ this.doctor }}</label>
+        <nb-card>
+          <nb-card-body>
+            <form id="form-configurar-dia-atendimento" [formGroup]="formDiaAtendimento">
+              <div class="col-md-12 col-xs-12">
+                <div class="form-row align-items-center">
+                  <nb-card-header class="aditi-header">
+                    <div class="back-link">
+                      <a class="m-lg-n3" (click)="previousPage()" aria-label="back">
+                        <nb-icon icon="arrow-back" title="voltar"></nb-icon>
+                      </a>
+                    </div>
+                  </nb-card-header>
+                  <div class="form-group col-md-6">
+                    <h5 class="pt-3">Gerenciar Horário de Atendimento</h5>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="form-row align-items-center">
-              <div class="form-group col-md-3">
-                <div class="form-group">
-                  <div class="div-medico">
-                    <label for="semana">Escolha o dia da semana</label>
-                    <select class="form-control" formControlName="semana">
-                      <option value="null" selected>SELECIONE</option>
-                      <option *ngFor="let semana of listSemana" value="{{ semana.semana }}">{{
-                        semana.descricao}}</option>
-                    </select>
+                <div class="form-row align-items-center">
+                  <div class="form-group col-md-7">
+                    <div class="form-group">
+                      <div class="mb-lg-n4">
+                        <label for="medico">Nome do médico: {{ this.doctor }}</label>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-9">
-                <div class="form-group pt-2">
-                  <div class="text-right">
-                    <button class="btn btn-primary mr-3" (click)="addHora()">
-                      Adcionar horas
-                    </button>
-                    <button class="btn btn-danger mr-3" (click)="removerCard()">
-                      Remover card horas
-                    </button>
-                    <button class="btn btn-success" (click)="salvar(formDiaAtendimento.value)">
-                      Salvar
-                    </button>
+                <div class="form-row align-items-center">
+                  <div class="form-group col-md-3">
+                    <div class="form-group">
+                      <div class="div-medico">
+                        <label for="semana">Escolha o dia da semana</label>
+                        <select class="form-control" formControlName="semana" (change)="addHora()">
+                          <option value="null" selected>SELECIONE</option>
+                          <option *ngFor="let semana of listSemana" value="{{ semana.semana }}">{{
+                            semana.descricao}}</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-9">
+                    <div class="form-group pt-2">
+                      <div class="text-right">
+                        <button class="btn btn-primary mr-3" (click)="addHora()">
+                          Adcionar horas
+                        </button>
+                        <button class="btn btn-success" (click)="salvar(formDiaAtendimento.value)">
+                          Salvar
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group col-md-7">
+                    <div class="title">
+                      Informa a sua data de Início e Fim de Atendimento, caso atenda em mais de um horário adicione mais
+                      de uma faixa de horários.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="form-group col-md-7">
-                <div class="title">
-                  Informa a sua data de Início e Fim de Atendimento, caso atenda em mais de um horário adicione mais
-                  de
-                  uma faixade horários.
-                </div>
-              </div>
-            </div>
-            <div class="form-row align-items-center">
-              <nb-card-body>
-                <section class="align-items-center">
-                  <div class="col-md-12 col-xs-12">
-                    <form #card="ngForm">
-                      <div class="form-row align-items-center">
-                        <section class="border-dark m-3 btn mt-lg-n4 paragraph-2 mb-5" style="background-color: white;"
-                          *ngFor="let card of tipoCard; let i = index;">
-                          <div class="col-md-12 col-xs-12 ">
-                            <div class="row">
-                              <div class="col-md-12">
-                                <label for="horaInicio">Hora início</label>
-                                <div class="row pl-3">
-                                  <input type="time" name="appt" required name="card{{card.id}}"
-                                    [(ngModel)]="card.horaInicio" />
-                                </div>
-                                <label for="horaFim">Hora fim</label>
-                                <div class="row pl-3">
-                                  <input type="time" name="appt" required name="car{{card.id}}"
-                                    [(ngModel)]="card.horaFim" />
+                <div class="form-row align-items-center">
+                  <nb-card-body>
+                    <section class="align-items-center">
+                      <div class="col-md-12 col-xs-12">
+                        <form #card="ngForm">
+                          <div class="form-row align-items-center">
+                            <section class="border-dark m-3 btn mt-lg-n4 paragraph-2 mb-5"
+                              style="background-color: white;" *ngFor="let card of tipoCard; let i = index;">
+                              <div class="col-md-12 col-xs-12 ">
+                                <div class="row">
+                                  <div class="col-md-12">
+                                    <label for="horaInicio">Hora início</label>
+                                    <i class="fa fa-window-close alert-danger carousel-item-next" aria-hidden="true"
+                                      (click)="removerCard()"></i>
+                                    <div class="row pl-3">
+                                      <input type="time" name="appt" required name="card{{card.id}}"
+                                        [(ngModel)]="card.horaInicio" />
+                                    </div>
+                                    <label for="horaFim">Hora fim</label>
+                                    <div class="row pl-3">
+                                      <input type="time" name="appt" required name="car{{card.id}}"
+                                        [(ngModel)]="card.horaFim" />
+                                    </div>
+                                  </div>
                                 </div>
                               </div>
-                            </div>
+                            </section>
                           </div>
-                        </section>
+                        </form>
                       </div>
-                    </form>
-                  </div>
-                </section>
-              </nb-card-body>
-            </div>
-            <!--<div class="form-row align-items-center">
-                <div class="form-group col-md-12">
-                  <nb-card>
-                    <nb-card-body>
-                      <div class="form-row align-items-center">
-                        <div class="col-md-12 col-xs-12">
-                          <ng2-smart-table [settings]="settings" [source]="source" (deleteConfirm)="onDeleteConfirm($event)"
-                            (editConfirm)="onSaveConfirm($event)" (createConfirm)="onCreateConfirm($event)"> </ng2-smart-table>
-                        </div>
-                      </div>
-                    </nb-card-body>
-                  </nb-card>
+                    </section>
+                  </nb-card-body>
                 </div>
-              </div>   -->
-            <div class="form-row align-items-center">
-              <div class="form-group col-md-12">
-                <nb-card>
-                  <nb-card-body>
+                <div class="form-row align-items-center">
+                  <div class="form-group col-md-12">
                     <div class="app-box">
                       <ngx-datatable #myTable class="bootstrap" [rows]="rowData" [columnMode]="'force'"
                         [headerHeight]="35" [footerHeight]="50" [rowHeight]="'auto'"
                         [messages]="{emptyMessage: 'Sem dados...'}" [limit]="8">
 
-                        <ngx-datatable-column name="Nome" prop="nome">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.nome }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
                         <ngx-datatable-column name="Segunda" prop="segunda">
                           <ng-template ngx-datatable-cell-template let-row="row">
                             <div class="text-center">
@@ -199,20 +176,25 @@
                         </ngx-datatable-footer>
                       </ngx-datatable>
                     </div>
-                  </nb-card-body>
-                </nb-card>
+                  </div>
+                </div>               
               </div>
-            </div>
-            <div class="row" *ngIf="isActive" class="loader">
-              <div class="text-center" style="margin-top: -250px;">
-                <button class="btn btn-primary" type="button" disabled>
-                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                  Carregando...
-                </button>
-              </div>
-            </div>
-          </div>
-        </form>
+            </form>
+          </nb-card-body>
+        </nb-card>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div #card>
+  <div class="col-md-12 col-xs-12">
+    <div class="row" *ngIf="isActive" class="loader">
+      <div class="text-center" style="margin-top: -360px;">
+        <button class="btn btn-primary" type="button" disabled>
+          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Carregando...
+        </button>
       </div>
     </div>
   </div>
